fix overflow logout

--- a/src/navigation/navigation.scss
+++ b/src/navigation/navigation.scss
@@ -106,6 +106,7 @@ nav {
    }
    
    .top-nav-menu > li > a { font-size: 18px; color: white; }
+   .nav-menu > li > ul { max-height: 80vh; overflow: auto; }
    
    .login button {
      margin: 15px 0;
